<resources>
    <string name="app_name">login</string>

    <!-- Strings related to login -->
    <string name="app_id">1638247356482080</string>
    <string name="title_activity_display_menu">Today\'s Menu</string>
    <string name="title_activity_display_lunch">"Today's Lunch "</string>
    <string name="title_activity_display_dinner">Today\'s Dinner:)</string>
    <string name="title_activity_display_breakfast">Today\'s Breakfast</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="str_btn_draw">Draw Route</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="title_activity_user_area">UserAreaActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_name">Enter Name</string>
    <string name="btn_link_to_login">Already registered, back to login</string>
    <string name="pname">Create Username</string>
    <string name="hint_email_r">Enter Login Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_from_to">FromToActivity</string>


</resources>
